# ReminderBot

./: .gitignore  CHANGELOG.md  ReminderBot.cabal  cabal.project.freeze  docker-compose.yaml  dockerfile  example-config.json  makefile
app/: Main.hs
src/: Bot.hs
src/Bot/: Commands.hs
src/Bot/Commands/: Decoder.hs  Types.hs
src/Data/Types/: App.hs  Env.hs  Error.hs
src/Data/Types/DB/: Permissions.hs  Reminder.hs  Schema.hs  Util.hs
