cabal-version:      3.4
name:               ReminderBot
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Harvey
maintainer:         owenlharvey@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common extensions
    default-extensions: DataKinds
                      , OverloadedRecordDot
                      , OverloadedStrings
                      , DuplicateRecordFields
                      , GeneralisedNewtypeDeriving
                      , ScopedTypeVariables
                      , ConstraintKinds
                      , CPP
                      , TemplateHaskell

common threads
    ghc-options: -threaded
                 -rtsopts
                 -with-rtsopts=-N

common warnings
    ghc-options: -Wall

common depends
    build-depends:    base ^>=4.19.1.0
                    , discord-haskell
                    , text
                    , sqlite-simple
                    , mtl
                    , transformers
                    , containers
                    , lens
                    , aeson
                    , bytestring
                    , directory
                    , filepath
                    , time
                    , uuid
                    , scientific

library
    import:           warnings
    import:           depends
    import:           extensions
    exposed-modules:  Bot
                    , Bot.Commands
                    , Bot.Commands.Decoder
                    , Data.Types.Env
                    , Data.Types.App
                    , Data.Types.Error
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: GHC2021

executable ReminderBot
    import:           warnings
    import:           threads
    import:           extensions
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0,
        ReminderBot,
        aeson

    hs-source-dirs:   app
    default-language: GHC2021

test-suite ReminderBot-test
    import:           warnings
    import:           extensions
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.1.0,
        ReminderBot
