cabal-version:      3.4
name:               ReminderBot
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Harvey
maintainer:         owenlharvey@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common extensions
    default-extensions: DataKinds
                      , OverloadedRecordDot
                      , OverloadedStrings
                      , DuplicateRecordFields
                      , GeneralisedNewtypeDeriving
                      , ScopedTypeVariables
                      , ConstraintKinds
                      , CPP
                      , TemplateHaskell

common threads
    ghc-options: -threaded
                 -rtsopts
                 -with-rtsopts=-N

common warnings
    ghc-options: -Wall

common depends
    build-depends:    base >=4 && < 5
                    , discord-haskell >= 1.17 && < 2
                    , text
                    , sqlite-simple >= 0.4 && < 0.5
                    , mtl
                    , transformers
                    , containers
                    , lens >= 5 && < 6
                    , aeson >= 2.2 && < 2.3
                    , bytestring
                    , directory >= 1.3 && < 1.4
                    , filepath >= 1.4 && < 1.5
                    , time >= 1 && < 2
                    , uuid >= 1 && < 2
                    , scientific >= 0.3 && < 0.4
                    , stm
                    , unbounded-delays >= 0.1 && < 0.2

library
    import:           warnings
    import:           depends
    import:           extensions
    exposed-modules:  Bot
                    , Bot.Commands
                    , Bot.Commands.Decoder
                    , Bot.Commands.Types
                    , Data.Types.Env
                    , Data.Types.App
                    , Data.Types.Error
                    , Data.Types.DB.Schema
                    , Data.Types.DB.Reminder
                    , Data.Types.DB.Util
                    , Data.Types.DB.Permissions
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: GHC2021

executable ReminderBot
    import:           warnings
    import:           threads
    import:           extensions
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4 && < 5,
        ReminderBot,
        aeson >= 2.2 && < 2.3

    hs-source-dirs:   app
    default-language: GHC2021

test-suite ReminderBot-test
    import:           warnings
    import:           extensions
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4 && < 5,
        ReminderBot
